移除 Cloud 管理界面登录页面的 Terms 和 Privacy Policy 链接

--- a/admin_frontend/templates/pages/login_v2.html
+++ b/admin_frontend/templates/pages/login_v2.html
@@ -115,8 +115,9 @@
     <div style="max-width: 256px">
       <small style="color: #888; text-align: center; display: block">
         By clicking "Continue" above, you agreed to AppFlowy's
-        <a href="https://appflowy.io/terms">Terms</a> and
-        <a href="https://appflowy.io/privacy">Privacy Policy</a>.
+        <!-- <a href="https://appflowy.io/terms">Terms</a> and
+        <a href="https://appflowy.io/privacy">Privacy Policy</a>. -->
+        Terms and Privacy Policy.
       </small>
     </div>
   </div>
